CHAT FIXED